// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/basic.md correctly 1`] = `
<label
  class="alu-radio-wrapper"
>
  <span
    class="alu-radio"
  >
    <input
      class="alu-radio-input"
      type="radio"
    />
    <span
      class="alu-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disable.md correctly 1`] = `
<div>
  <label
    class="alu-radio-wrapper alu-radio-wrapper-disabled"
  >
    <span
      class="alu-radio alu-radio-disabled"
    >
      <input
        class="alu-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <br />
  <label
    class="alu-radio-wrapper alu-radio-wrapper-disabled"
  >
    <span
      class="alu-radio alu-radio-checked alu-radio-disabled"
    >
      <input
        checked=""
        class="alu-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <div
    style="margin-top:20px"
  >
    <button
      class="alu-btn alu-btn-primary"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton.md correctly 1`] = `
<div>
  <div>
    <div
      class="alu-radio-group alu-radio-group-outline"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="alu-radio-group alu-radio-group-outline"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-disabled"
      >
        <span
          class="alu-radio-button alu-radio-button-disabled"
        >
          <input
            class="alu-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="alu-radio-group alu-radio-group-outline"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked alu-radio-button-wrapper-disabled"
      >
        <span
          class="alu-radio-button alu-radio-button-checked alu-radio-button-disabled"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            disabled=""
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-disabled"
      >
        <span
          class="alu-radio-button alu-radio-button-disabled"
        >
          <input
            class="alu-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-disabled"
      >
        <span
          class="alu-radio-button alu-radio-button-disabled"
        >
          <input
            class="alu-radio-button-input"
            disabled=""
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-disabled"
      >
        <span
          class="alu-radio-button alu-radio-button-disabled"
        >
          <input
            class="alu-radio-button-input"
            disabled=""
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton-solid.md correctly 1`] = `
<div>
  <div>
    <div
      class="alu-radio-group alu-radio-group-solid"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="alu-radio-group alu-radio-group-solid"
    >
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-disabled"
      >
        <span
          class="alu-radio-button alu-radio-button-disabled"
        >
          <input
            class="alu-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup.md correctly 1`] = `
<div
  class="alu-radio-group alu-radio-group-outline"
>
  <label
    class="alu-radio-wrapper alu-radio-wrapper-checked"
  >
    <span
      class="alu-radio alu-radio-checked"
    >
      <input
        checked=""
        class="alu-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md correctly 1`] = `
<div
  class="alu-radio-group alu-radio-group-outline"
>
  <label
    class="alu-radio-wrapper alu-radio-wrapper-checked"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="alu-radio alu-radio-checked"
    >
      <input
        checked=""
        class="alu-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      Option A
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      Option B
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      Option C
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      More...
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md correctly 1`] = `
<div>
  <div
    class="alu-radio-group alu-radio-group-outline"
  >
    <label
      class="alu-radio-wrapper alu-radio-wrapper-checked"
    >
      <span
        class="alu-radio alu-radio-checked"
      >
        <input
          checked=""
          class="alu-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="alu-radio-group alu-radio-group-outline"
  >
    <label
      class="alu-radio-wrapper alu-radio-wrapper-checked"
    >
      <span
        class="alu-radio alu-radio-checked"
      >
        <input
          checked=""
          class="alu-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="alu-radio-group alu-radio-group-outline"
  >
    <label
      class="alu-radio-wrapper alu-radio-wrapper-checked"
    >
      <span
        class="alu-radio alu-radio-checked"
      >
        <input
          checked=""
          class="alu-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="alu-radio-wrapper"
    >
      <span
        class="alu-radio"
      >
        <input
          class="alu-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="alu-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md correctly 1`] = `
<div
  class="alu-radio-group alu-radio-group-outline"
>
  <label
    class="alu-radio-wrapper alu-radio-wrapper-checked"
  >
    <span
      class="alu-radio alu-radio-checked"
    >
      <input
        checked=""
        class="alu-radio-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="alu-radio-wrapper"
  >
    <span
      class="alu-radio"
    >
      <input
        class="alu-radio-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
      <span
        class="alu-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/size.md correctly 1`] = `
<div>
  <div>
    <div
      class="alu-radio-group alu-radio-group-outline alu-radio-group-large"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="alu-radio-group alu-radio-group-outline"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="alu-radio-group alu-radio-group-outline alu-radio-group-small"
    >
      <label
        class="alu-radio-button-wrapper alu-radio-button-wrapper-checked"
      >
        <span
          class="alu-radio-button alu-radio-button-checked"
        >
          <input
            checked=""
            class="alu-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="alu-radio-button-wrapper"
      >
        <span
          class="alu-radio-button"
        >
          <input
            class="alu-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="alu-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;
